# RabbitMQ_messages

./: README.md  pyproject.toml
Scripts/: consumer.py  models.py  producer.py
