[tool.poetry]
name = "rabbitmq-messages"
version = "0.1.0"
description = ""
authors = ["Artur Mistiuk <mistiuk.artur@gmail.com>"]
readme = "README.md"
packages = [{include = "rabbitmq_messages"}]

[tool.poetry.dependencies]
python = "^3.11"
pika = "^1.3.2"
mongoengine = "^0.27.0"
faker = "^18.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
